# Aether

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  HIL_REPORT.md  README.md  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  check_output_5.txt  check_output_6.txt  clippy_errors.txt  daemon_debug_log.txt  daemon_log.txt  deny.toml  io.github.w1ne.Aether.desktop  io.github.w1ne.Aether.yaml  v0.2.5_notes.md
.agent/workflows/: hil-test.md
.github/workflows/: ci.yml  release.yml
aether-agent-api/: Cargo.toml  README.md  build.rs
aether-agent-api/examples/: agent_verify.rs  client.rs
aether-agent-api/proto/: aether.proto
aether-agent-api/src/: lib.rs
aether-agent-api/tests/: agent_api.rs  cli_daemon.rs
aether-core/: Cargo.toml
aether-core/examples/: auto_diag.rs  hil_diag.rs  list_probes.rs  list_targets.rs  list_targets_v2.rs
aether-core/src/: lib.rs  session.rs  stack.rs  trace.rs
aether-core/src/debug/: breakpoint.rs  mod.rs
aether-core/src/disasm/: mod.rs
aether-core/src/flash/: mod.rs
aether-core/src/itm/: mod.rs
aether-core/src/memory/: mod.rs
aether-core/src/probe/: mod.rs
aether-core/src/rtos/: embassy.rs  freertos.rs  mod.rs
aether-core/src/rtt/: mod.rs
aether-core/src/semihosting/: mod.rs
aether-core/src/svd/: mod.rs
aether-core/src/symbols/: mod.rs
aether-core/tests/: dwarf_tests.rs  e2e_scenarios.rs  integration_tests.rs
aether-core/tests/fixtures/: complex_types.elf  complex_types.rs  rust_types.elf  rust_types.rs
aether-demo-fw/: Cargo.toml  build.rs
aether-demo-fw/.cargo/: config.toml
aether-demo-fw/src/: main.rs
aether-ui/: Cargo.toml
aether-ui/src/: main.rs  ui_logic.rs  ui_tabs.rs
benchmarks/: core_bench.rs
docs/: AGENT_INTERFACE.md  BUILD.md  CLI.md  CONTRIBUTING.md  GIT_FLOW.md  HARDWARE_SETUP.md  HARDWARE_SETUP_STM32.md  HIL_REPORT.md  LABWIRED_SHADOW_ENGINE.md  QUICKSTART.md  RELEASE_TEMPLATE.md  RELEASING.md  ROADMAP.md  TEST_STRATEGY.md  TROUBLESHOOTING.md  USE_CASES.md
docs/spec/: Aether. Market Conditions for Product Success.md  Open-Source Debugger Development Plan.md
integrations/openclaw/: aether_tools.yaml
scripts/: pre-commit.sh  test_cli_e2e.sh  test_cli_hw.sh
test_results/: cli_logs.txt
tests/: hil_smoke.sh
