[package]
name = "aether-agent-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
futures-core = "0.3"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
aether-core = { path = "../aether-core" }
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.0"

[lints]
workspace = true
