[package]
name = "aether-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
probe-rs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
crossbeam-channel.workspace = true
capstone = "0.12"
svd-parser = "0.14"
svd-rs = "0.14"

[[bench]]
name = "core_bench"
harness = false
path = "../benchmarks/core_bench.rs"

[dev-dependencies]
criterion.workspace = true
