[package]
name = "aether-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
probe-rs.workspace = true
svd-parser.workspace = true
svd-rs.workspace = true
capstone.workspace = true
probe-rs-debug.workspace = true
typed-path = "0.12"
gimli = "0.31"
object = "0.36"
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
crossbeam-channel.workspace = true
tokio = { version = "1.0", features = ["sync"] }

[[bench]]
name = "core_bench"
harness = false
path = "../benchmarks/core_bench.rs"

[dev-dependencies]
criterion.workspace = true
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
