[package]
name = "aether-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aether-core = { path = "../aether-core", default-features = false }
aether-agent-api = { path = "../aether-agent-api", default-features = false }
eframe.workspace = true
egui.workspace = true
egui_plot.workspace = true
egui_dock.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
probe-rs = { workspace = true, optional = true }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
tokio = { version = "1.0", features = ["sync", "rt", "net", "time", "macros"] }
tokio-stream = "0.1"
serde_json = "1.0"

[target.'cfg(not(target_os = "ios"))'.dependencies]
# Desktop gets glow (OpenGL) + wgpu for full render backend support
eframe = { workspace = true, features = ["glow"] }
rfd = { workspace = true }

[features]
default = ["hardware"]
hardware = ["aether-core/hardware", "aether-agent-api/hardware", "probe-rs"]
