[package]
name = "aether-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A high-performance embedded systems debugger"
categories = ["development-tools", "embedded-development"]

[package.metadata.deb]
maintainer = "Aether Contributors <contributors@aether.io>"
copyright = "2026, Aether Contributors"
extended-description = "A high-performance embedded systems debugger built with Rust and egui."
section = "devel"
priority = "optional"
assets = [
    ["target/release/aether-ui", "usr/bin/aether-ui", "755"],
    ["../io.github.w1ne.Aether.desktop", "usr/share/applications/io.github.w1ne.Aether.desktop", "644"],
    ["assets/icon.png", "usr/share/icons/hicolor/512x512/apps/io.github.w1ne.Aether.png", "644"],
]

[package.metadata.generate-rpm]
package = "aether-ui"
assets = [
    { source = "target/release/aether-ui", dest = "/usr/bin/aether-ui", mode = "0755" },
    { source = "../io.github.w1ne.Aether.desktop", dest = "/usr/share/applications/io.github.w1ne.Aether.desktop", mode = "0644" },
    { source = "assets/icon.png", dest = "/usr/share/icons/hicolor/512x512/apps/io.github.w1ne.Aether.png", mode = "0644" }
]

[package.metadata.generate-rpm.cargo]
buildflags = ["--release"]

[dependencies]
aether-core = { path = "../aether-core", default-features = false }
aether-agent-api = { path = "../aether-agent-api", default-features = false }
eframe.workspace = true
egui.workspace = true
egui_plot.workspace = true
egui_dock.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
probe-rs = { workspace = true, optional = true }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
tokio = { version = "1.0", features = ["sync", "rt", "net", "time", "macros"] }
tokio-stream = "0.1"
serde_json = "1.0"

[target.'cfg(not(target_os = "ios"))'.dependencies]
# Desktop gets glow (OpenGL) + wgpu for full render backend support
eframe = { workspace = true, features = ["glow"] }
rfd = { workspace = true }

[features]
default = ["hardware"]
hardware = ["aether-core/hardware", "aether-agent-api/hardware", "probe-rs"]
